--- a/src/components/buttons/buttons.styles.css
+++ b/src/components/buttons/buttons.styles.css
@@ -29,3 +29,7 @@
 .containerButtons .btn4 {
   background-color: burlywood;
 }
+
+.containerButtons .btn5 {
+  background-color: rgb(135, 222, 141);
+}
